# cli-autoproject

./: .gitignore  README.md  pyproject.toml
auto_project/: main.py
