[tool.poetry]
name = "auto-project"
version = "0.1.0"
description = ""
authors = ["alec-ibp <alejo1ibarra@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_project"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.scripts]
autoproject = "auto_project.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
